@@ -1,3 +1,7 @@
+2003-07-15  Andrew Cagney  <cagney@redhat.com>
+
+	* gdb.asm/asm-source.exp: Do not allow "start" in the backtrace.
+
 2003-07-09  Michal Ludvig  <mludvig@suse.cz>
 
 	* gdb.c++/templates.exp (test_ptype_of_templates): Recognize
